[gd_scene load_steps=16 format=3 uid="uid://df61wqntfphtr"]

[ext_resource type="FontFile" uid="uid://cg8kr11cqrt5s" path="res://assets/kenvector_future_thin.ttf" id="1_ofa15"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_pegsi"]
[ext_resource type="LabelSettings" uid="uid://dxfddf6itgj0t" path="res://assets/theme/heading-label-settings.tres" id="3_jsutt"]
[ext_resource type="Texture2D" uid="uid://ds8vg4ut76q5j" path="res://assets/shield_gold.png" id="3_vmkju"]
[ext_resource type="Texture2D" uid="uid://bj0d5pmgfherf" path="res://assets/bar_glass_200.png" id="4_10lpo"]
[ext_resource type="LabelSettings" uid="uid://bfay816qnx638" path="res://assets/theme/wave-label-settings.tres" id="4_orrfd"]
[ext_resource type="Texture2D" uid="uid://bkvghbus453m6" path="res://assets/bar_green_200.png" id="5_cgbys"]
[ext_resource type="PackedScene" uid="uid://cqead78vphyh6" path="res://scenes/player_life.tscn" id="6_cskqb"]
[ext_resource type="Texture2D" uid="uid://bfxglnljarcyg" path="res://assets/charge_shot_icon.png" id="7_p6nc7"]
[ext_resource type="Texture2D" uid="uid://dmr38p56nelbt" path="res://assets/bar_glass_charged_200.png" id="8_tomq6"]
[ext_resource type="Texture2D" uid="uid://blw1l551nwsnt" path="res://assets/bar_charge_200.png" id="9_mj01g"]
[ext_resource type="Theme" uid="uid://d3gyioyovgypn" path="res://assets/theme/space_rocks_theme.tres" id="11_1555l"]

[sub_resource type="InputEventKey" id="InputEventKey_dprgi"]
pressed = true
keycode = 13

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_ptr3w"]
button_index = 6
pressed = true

[sub_resource type="Shortcut" id="Shortcut_dma03"]
events = [SubResource("InputEventKey_dprgi"), SubResource("InputEventJoypadButton_ptr3w")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_pegsi")
life_scene = ExtResource("6_cskqb")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FreeGuyTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_jsutt")

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WaveLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
label_settings = ExtResource("4_orrfd")

[node name="ShieldContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ShieldContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("3_vmkju")
stretch_mode = 3

[node name="ShieldBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/ShieldContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.75
texture_over = ExtResource("4_10lpo")
texture_progress = ExtResource("5_cgbys")

[node name="ChargeShotContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/ChargeShotContainer"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("7_p6nc7")
stretch_mode = 3

[node name="ChargedShotBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/ChargeShotContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 3.0
step = 0.1
texture_over = ExtResource("8_tomq6")
texture_progress = ExtResource("9_mj01g")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ChargeShotContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme_override_fonts/normal_font = ExtResource("1_ofa15")
theme_override_font_sizes/normal_font_size = 12
text = "HOLD FIRE TO CHARGE"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Message" type="Label" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 2
text = "Space Rocks!"
label_settings = ExtResource("3_jsutt")
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("11_1555l")
shortcut = SubResource("Shortcut_dma03")
text = "PLAY"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FreeGuyTimer" to="." method="_on_free_guy_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
